--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,32 @@
 {
-    "name": "infolu/animate",
-    "description": "Descrição do seu pacote",
-    "version": "1.0.0",
+  "name": "infolu/animate",
+  "description": "The most popular front-end framework for developing responsive, mobile first projects on the web.",
+  "keywords": [
+    "css",
+    "js",
+    "sass",
+    "mobile-first",
+    "responsive",
+    "front-end",
+    "framework",
+    "web"
+  ],
+  "homepage": "https://getbootstrap.com/",
+  "authors": [
+    {
+      "name": "Mark Otto",
+      "email": "markdotto@gmail.com"
+    },
+    {
+      "name": "Jacob Thornton",
+      "email": "jacobthornton@gmail.com"
+    }
+  ],
+  "support": {
+    "issues": "https://github.com/twbs/bootstrap/issues"
+  },
+  "license": "MIT",
+  "replace": {
+    "infolu/animate": "self.version"
+  }
 }
